java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/CreateElementTest/test190447b-hints.pass
Create Local Variable t
Create Field t in org.netbeans.test.java.hints.Bug190447
Create Parameter t
